--- a/HomeWork25/newApp/bower.json
+++ b/HomeWork25/newApp/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui-router",
+  "name": "new-app",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.4.0",
@@ -15,7 +15,7 @@
     "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
-  "moduleName": "uiRouterApp",
+  "moduleName": "newAppApp",
   "overrides": {
     "bootstrap": {
       "main": [
